--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <section class="experience-card fade-in">
   <h2>The Drive Behind the Data.</h2>
   <p>
-    Before diving into the world of business analytics, information security, and AI/ML, I spent five years competing as a Division I college baseball player. I earned my undergraduate degree in Business Administration from the University of San Francisco, where I took the mound as a left-handed relief pitcher, and was named a member of the WCC All-Academic Team twice. My journey continued at Oakland University, where I pursued graduate studies in Management Information Systems while still competing as a pitcher.
+    Before diving into the world of business analytics, information security, and AI/ML, I spent five years competing as a Division I college baseball player. I earned my undergraduate degree in Business Administration from the University of San Francisco, where I took the mound as a left-handed relief pitcher, and was named a member of the WCC All-Academic Team twice. Following, I had the opportunity to compete in the Cape Cod Baseball League (CCBL) for the Brewster Whitecaps. My journey continued at Oakland University, where I pursued graduate studies in Management Information Systems while still competing as a pitcher.
   </p><br><br>
   <p>
     Off the field, in airports, hotels, and long bus rides I taught myself to code and began experimenting with AI-powered automation. I knew that the accelerating shift toward machine learning and intelligent systems would reward those who acted early, and I made it my mission to be one of them.
