--- a/experience.html
+++ b/experience.html
@@ -68,6 +68,15 @@
   </ul>
 </section>
 
+    <section class="experience-card fade-in">
+  <h2>Graduate Certificate · Management Information Systems</h2>
+  <h3>Oakland University</h3>
+  <ul>
+    <li>Focuses on the intersection of technology, data, and business strategy, providing firsthand experience in designing, managing, and implementing information systems that support organizational goals.</li>
+    <li>Blends coursework in analytics, cybersecurity, database management, and leadership to help equip students for roles in IT management, consulting, and digital transformation.</li>
+  </ul>
+</section>
+
 <section class="experience-card fade-in">
   <h2>Technical Skills</h2>
 
