--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     Before diving into the world of business analytics, information security, and AI/ML, I spent five years competing as a Division I college baseball player. I earned my undergraduate degree in Business Administration from the University of San Francisco, where I took the mound as a left-handed relief pitcher, and was named a member of the WCC All-Academic Team twice. Following, I had the opportunity to compete in the Cape Cod Baseball League (CCBL) for the Brewster Whitecaps. My journey continued at Oakland University, where I pursued graduate studies in Management Information Systems while still competing as a pitcher.
   </p><br><br>
   <p>
-    Off the field, in airports, hotels, and long bus rides I taught myself to code and began experimenting with AI-powered automation. I knew that the accelerating shift toward machine learning and intelligent systems would reward those who acted early, and I made it my mission to be one of them.
+    Off the field, in airports, hotels, and on long bus rides I taught myself to code and began experimenting with AI-powered automation. I knew that the accelerating shift toward machine learning and intelligent systems would reward those who acted early, and I made it my mission to be one of them.
   </p><br><br>
   <p>
     This mix of structure, self discipline, and curiosity continues to shape my professional identity. I’ve built chatbot systems, automated reporting pipelines, and worked at the intersection of data and security, all with the mindset of an athlete and the precision of an analyst.
